# my_shell

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
.trunk/: trunk.yaml
src/: cmd.rs  main.rs  readln.rs
