[package]
name = "rshell"
version = "1.0.2"
edition = "2021"
authors = ["Ashe Aupepin <ashe.sudosmile@gmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
colored = "2.0.0"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
clap = { version = "3.1.6", features = ["derive", "env"] }
